--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -1,3 +1,21 @@
 .root {
     background-color: red;
 }
+
+div{
+    width: 95%;
+    height: 95%;
+    display: flex;
+    flex-direction: column;
+}
+
+.addButton{
+    background-color: #008CBA;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 10px 15px;
+    font-size: 30px;
+    box-shadow: 0 0 12px 0 #008CBA;
+    align-self: flex-end;
+}
