add picture and style input

--- a/src/containers/components/todo-list.module.css
+++ b/src/containers/components/todo-list.module.css
@@ -6,3 +6,14 @@
     flex-direction: column;
     align-items: space-between;
 }
+
+img {
+    max-height: 80%;
+    max-width: 60%;
+    align-self: center;
+}
+
+p{
+    align-self: center;
+    
+}
