using redux instead of states

--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -2,7 +2,7 @@
     background-color: red;
 }
 
-div{
+.container{
     width: 95%;
     height: 95%;
     display: flex;
@@ -17,9 +17,15 @@ div{
     padding: 15px 25px;
     font-size: 30px;
     box-shadow: 0 0 12px 0 #008CBA;
+    opacity: 1;
     align-self: flex-end;
+    transition: 0.2s;
 }
 
 .addButton:hover{
+    background-color: transparent;
+    border-style: solid;
+    border-color: #008CBA;
+    color: #008CBA;
     cursor: pointer;
 }
