--- a/src/containers/components/todo-input.module.css
+++ b/src/containers/components/todo-input.module.css
@@ -37,9 +37,34 @@ input::placeholder{
     font-size: 30px;
     box-shadow: 0 0 12px 0 #008CBA;
     margin-top: 25px;
+    transition: 0.2s;
 }
 
 .doneButton:hover{
     cursor: pointer;
+    background-color: transparent;
+    border-style: solid;
+    border-color: #008CBA;
+    color: #008CBA;
+}
+
+.header{
+    display: flex;
+    width: 100%;
+    height: 15%;
+}
+
+.closeButton{
+    align-self: flex-end ;
+    justify-self: right;
+    font-size: 30px;
+    background-color: transparent;
+    border-color: transparent;
+    transition: 0.1s;
+    cursor: pointer;
+}
+
+.closeButton:active{
+    font-size: 26px;
 }
 
