add Item connect and delete function
* fix X button and Done in form

* clean props

* using mapDispatch and map State

* finish

* add Todo type to the list

* add for sunday

* change interface if TodoItem

* delete item

* style delete button

* style item

--- a/src/containers/components/todo-input.module.css
+++ b/src/containers/components/todo-input.module.css
@@ -16,11 +16,13 @@ input{
     line-height: 35px;
     font-size: 18px;
     margin-top: 5px;
+    padding-left: 10px;
 }
 
 label{
     font-size:22px;
     color: rgb(38, 38, 38);
+    padding-left: 10px;
 }
 
 input::placeholder{
