--- a/src/containers/components/todo-item.module.css
+++ b/src/containers/components/todo-item.module.css
@@ -26,3 +26,14 @@
     padding: 10px;
     margin: 8px;
 }
+
+.checkBox {
+    margin-right: 1%;
+}
+
+.completedItem{
+    background-color: white;
+    color:green;
+    width: 100%;
+    text-decoration: line-through;
+}
