--- a/src/containers/components/pure/todo-list.module.css
+++ b/src/containers/components/pure/todo-list.module.css
@@ -1,10 +1,12 @@
 .list {
+    width: 100%;
     list-style-type: none;
     margin-top: 25px;
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: space-between;
+    align-items: center;
+    justify-content: center;
 }
 
 img {
@@ -13,11 +15,11 @@ img {
     align-self: center;
 }
 
-p{
-    align-self: center;
-    
+p {
+    align-self: center;  
 }
 
 .containerCenter{
     align-content: center;
+    justify-content: center;
 }
